# git-changemail

./: Makefile.am  README.md  autogen.sh  configure.ac  git-changemail
doc/: Makefile.am  git-changemail.1.md
